--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "autoprefixer": "^9.7.3",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
@@ -19,7 +20,6 @@
     "css-loader": "^3.2.1",
     "cssnano": "^4.1.10",
     "file-loader": "^5.0.2",
-    "google-fonts-plugin": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
