--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "copy-webpack-plugin": "^5.0.5",
     "css-loader": "^3.2.1",
     "cssnano": "^4.1.10",
+    "debounce": "^1.2.0",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
